tests/valid/test02_funcion_basica.ml
// Test 02: Función básica con un parámetro
func doble(x) {
    return x * 2;
}
resultado = doble(5);
print(resultado);
