tests/errors/err09_llave_sin_cerrar.ml
// Error 09: Llave sin cerrar
func incompleta(x) {
    return x * 2;

a = 5;
print(a);
